--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "test": "jest --watch"
   },
   "dependencies": {
     "core-js": "^3.8.3",
@@ -14,10 +15,19 @@
     "vuex": "^4.0.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "@testing-library/vue": "^6.6.1",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "@vue/vue3-jest": "^29.2.2",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^29.4.3",
+    "jest": "^29.4.3",
+    "jest-environment-jsdom": "^29.4.3",
+    "jest-environment-jsdom-global": "^4.0.0",
+    "jsdom": "^21.1.0",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0"
   },
